--- a/WID/PageThumbnail.xaml
+++ b/WID/PageThumbnail.xaml
@@ -13,10 +13,15 @@
     </Grid.RowDefinitions>
 
     <StackPanel
+        HorizontalAlignment="Right"
         Orientation="Horizontal"
         Spacing="10"
         Grid.Row="1"
         >
+        <CheckBox
+            x:Name="cbSelected"
+            Visibility="Collapsed"
+            />
         <Button>
             <Button.Content>
                 <FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xE74D;" />
