feat(notes): Add button to export as Bismuth file

--- a/WID/CanvasPage.xaml
+++ b/WID/CanvasPage.xaml
@@ -324,6 +324,14 @@
                                 <KeyboardAccelerator Key="P" Modifiers="Control" />
                             </MenuFlyoutItem.KeyboardAccelerators>
                         </MenuFlyoutItem>
+                        <MenuFlyoutItem
+                            Text="Pages as Bismuth file"
+                            ToolTipService.ToolTip="Export selected pages to Bismuth file"
+                            >
+                            <MenuFlyoutItem.KeyboardAccelerators>
+                                <KeyboardAccelerator Key="B" Modifiers="Control" />
+                            </MenuFlyoutItem.KeyboardAccelerators>
+                        </MenuFlyoutItem>
                     </MenuFlyout>
                 </muxc:DropDownButton.Flyout>
             </muxc:DropDownButton>
